--- a/service.html
+++ b/service.html
@@ -174,7 +174,7 @@
                                     alt="Специалист по 3D моделированию"
                                     class="img-fluid mb-4 w-50 rounded-circle"
                                 />
-                                <h3 class="text-black">Иван Петров</h3>
+                                <h3 class="text-black">Иван P.</h3>
                                 <p>
                                     Иван Петров — эксперт по оптимизации
                                     мастерских для 3D моделирования и работы с
